# Stock_Daily_News

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: digest.yml
config/: stocks.json
src/: digest.py  run.py
stock_news_daily/: digest.py  mailer.py  run.py  technicals.py
tests/: test_config.py
