[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "stock-news-daily"
version = "0.1.0"
description = "Twice-daily LLM-curated stock news + technical analysis digest, delivered by email"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=0.8.0",
    "fintools-mcp>=0.1.0",
    "yfinance>=0.2.40",
    "resend>=2.0.0",
    "pytz>=2024.1",
]

[project.scripts]
# After `pip install -e .` you can run: stock-digest --market us
stock-digest = "stock_news_daily.run:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["stock_news_daily*"]
